--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       - ./docker/nginx.conf:/etc/nginx/conf.d/default.conf
 
   database:
-    image: mysql:latest
+    image: mysql:8.3
     container_name: 'database'
     working_dir: /app
     ports:
