--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,9 @@ services:
       context: .
       dockerfile: docker/app/Dockerfile
     container_name: 'app'
+    depends_on:
+      - database
+      - web
     volumes:
       - ./:/app
     working_dir: /app
@@ -15,6 +18,8 @@ services:
     image: nginx
     container_name: 'web'
     working_dir: /app
+    depends_on:
+      - database
     ports:
       - "8080:80"
     volumes:
