--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     depends_on:
       - database
       - web
+    restart: always
     volumes:
       - ./:/app
     working_dir: /app
@@ -22,6 +23,7 @@ services:
       - database
     ports:
       - "8080:80"
+    restart: always
     volumes:
       - ./:/app
       - ./docker/nginx.conf:/etc/nginx/conf.d/default.conf
@@ -32,6 +34,7 @@ services:
     working_dir: /app
     ports:
       - "3306:3306"
+    restart: always
     environment:
       MYSQL_DATABASE: 'source'
       MYSQL_USER: 'user'
